html id="page-top"追加, css #page-topと#page-top aを追加, jQuery追加"

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
               </button>
             </div>
           </form>
+          <div id="page-top">
+            <a href="#"></a>
+          </div>
         </div>
       </div>
     </div>
